--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
 	
 	<p id="statID"></p>
 	
+	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html" target="_blank">Click Here for RPi DHT1 Humidity and Temperature Graphs</a>
+	
 	<script>
 			
 		 function reload() {
