--- a/rpi.html
+++ b/rpi.html
@@ -226,6 +226,8 @@
 	
 	<p id="statID"></p>
 	
+	<a title="http://rgusensors.azurewebsites.net/" href="http://rgusensors.azurewebsites.net/">Click Here for Arduino SHT1 Humidity and Temperature Graphs</a>
+	
 	<script>
 			
 		 function reload() {
