--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
   </head>
   <body>
     <body style="background-color:aqua">
-    <h1>DHT11 Project</h1>
-	<h2>Raspberry Pi with WIFI Dongle</h2>
+    <h1>SHT1x Project</h1>
+	<h2>Arduino with Ethernet Shield</h2>
 	<hr>
     <div id="chart" style="width: 100%; height: 290px"></div>
 	<br/>
