--- a/index.html
+++ b/index.html
@@ -216,10 +216,11 @@
 	<div id="chartH" style="width: 100%;"></div>
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
-	<pre>
-	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream            </a>
+	<p
+	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
+	<pre>       </pre>
 	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html">Click Here for RPi DHT11 Humidity and Temperature Graphs</a>
-	</pre>
+	</p>
 	<br/>
 	<br/>
 	<div class="start_end">
