--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
 	<br/>
 	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html">Click Here for RPi DHT11 Humidity and Temperature Graphs</a>
-	<img src="Raspberry_Pi_Logo.svg" alt="Mountain View" style="width:304px;height:228px;">
+	<img src="rpilogo.png" alt="Mountain View" style="width:304px;height:228px;">
 	</p>
 	<div class="start_end">
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
