--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 	<br/>
 	<p>
 	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
-	<br/>
+	<img src="sparkfun.jpg" alt="Sparkfun" style="width:81px;height:81px;">
 	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html">Click Here for RPi DHT11 Humidity and Temperature Graphs</a>
-	<img src="rpilogo.png" alt="Mountain View" style="width:81px;height:102.4px;">
+	<img src="rpilogo.png" alt="RPi" style="width:81px;height:102.4px;">
 	</p>
 	<div class="start_end">
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
