--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	</style>
   </head>
   <body>
-    <body style="background-color:aqua">
+    <body style="background-color:white">
     <h1>SHT1x Project</h1>
 	<h2>Arduino with Ethernet Shield</h2>
 	<hr>
