--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	<br/>
 	<p>
 	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
-	<img src="datasparkfun.jpg" alt="Sparkfun" style="width:81px;height:81px;">
+	<img src="datasparkfun.png" alt="Sparkfun" style="width:81px;height:81px;">
 	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html">Click Here for RPi DHT11 Humidity and Temperature Graphs</a>
 	<img src="rpilogo.png" alt="RPi" style="width:81px;height:102.4px;">
 	</p>
