--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 	<div id="chartT" style="width: 100%;"></div>
 	<br/>
 	<p>
-	<a  title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
-	<img src="datasparkfun.png" alt="Sparkfun" style="width:81px;height:81px;">
+	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank">Click Here for Data Stream</a>
+	<a title="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" href="https://data.sparkfun.com/streams/3J5xqbLGGqcJQqMor7g8" target="_blank"><img src="datasparkfun.png" alt="Sparkfun" style="width:81px;height:81px;"></a>
 	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html">Click Here for RPi DHT11 Humidity and Temperature Graphs</a>
-	<img src="rpilogo.png" alt="RPi" style="width:81px;height:102.4px;">
+	<a title="http://rgusensors.azurewebsites.net/rpi.html" href="http://rgusensors.azurewebsites.net/rpi.html"><img src="rpilogo.png" alt="RPi" style="width:81px;height:102.4px;"></a>
 	</p>
 	<div class="start_end">
 		<a href="http://data.sparkfun.com/input/3J5xqbLGGqcJQqMor7g8?private_key=oZBlg6JaagtkaRexAplo&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
