--- a/rpi.html
+++ b/rpi.html
@@ -215,11 +215,13 @@
 	<br/>
 	<div id="chartH" style="width: 100%;"></div>
 	<div id="chartT" style="width: 100%;"></div>
-	<br/>
-	<a title="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" href="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" target="_blank">Click Here for Data Stream            </a>
+	<p>
+	<a title="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" href="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" target="_blank">Click Here for Data Stream</a>
+	<a title="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" href="https://data.sparkfun.com/streams/3JLDEmrrOvia1Dwaa51E" target="_blank"><img src="datasparkfun.png" alt="Sparkfun" style="width:81px;height:81px;"></a>
 	<a title="http://rgusensors.azurewebsites.net/" href="http://rgusensors.azurewebsites.net/">Click Here for Arduino SHT1 Humidity and Temperature Graphs</a>
-	<br/>
-	<br/>
+	<a title="http://rgusensors.azurewebsites.net/" href="http://rgusensors.azurewebsites.net/"><img src="arduino.png" alt="Arduino" style="width:86px;height:81px;"></a>
+	</p>
+
 	<div class="start_end">
 		<a href="http://data.sparkfun.com/input/3JLDEmrrOvia1Dwaa51E?private_key=oZJdk2ee0EsVmMJVV9mj&humidity=Start&temp=Start" target="_blank" onclick="reload()">Turn On Sensor</a>
 		<a href="http://data.sparkfun.com/input/3JLDEmrrOvia1Dwaa51E?private_key=oZJdk2ee0EsVmMJVV9mj&humidity=End&temp=End" target="_blank" onclick="reload()">Turn Off Sensor</a>
