--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <body>
     <body style="background-color:aqua">
     <h1>SHT1x Project</h1>
-	<h2>Arduino with Ethernet Shield</h2>
+	<h2>Arduino with WIFI Shield</h2>
 	<hr>
     <div id="chart" style="width: 100%; height: 290px"></div>
 	<br/>
