--- a/net.html
+++ b/net.html
@@ -125,10 +125,16 @@
 			vAxes: {
 				// Adds titles to each axis.
 				0: {title: 'Temperature/C',
-					
+				    viewWindow: {
+						max:20,
+						min:30
+					},
 					},
 				1: {title: 'Humidity/%',
-					
+					viewWindow: {
+						max:40,
+						min:70
+					},
 					},
 					},
 			colors: ['blue', 'red'],
